--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="contact-info">
             <h1>Email</h1>
             <h2>xcyth.dev@gmail.com</h2>
-            <h2>ritam@ritamc6.tech</h2>
+            <h2>xcyth@xcyth.xyz</h2>
           </div>
         </div>
         <div class="contact-item">
