--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>Sodepur, Kolkata, India</h2>
+            <h2>Kolkata, India</h2>
           </div>
         </div>
       </div>
