--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <title>Xcyth</title>
-  <link rel="icon" href="favicon.ico" type="image/ico">
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <!-- Header -->
