--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Discord Bot/Stack Developer</h2>
-        <p>I enjoy coding. It can be any Language. I wanna become a Software Developer at Google. I just like to code and spend time looking up different projects and challenges.</p>
+        <p>I enjoy coding. It can be any Language. I just like to code and spend time looking up different projects and challenges.</p>
         <!--<a href="#" class="cta">Download Resume</a>-->
       </div>
     </div>
